Fix main page main spacing

--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,13 @@
 }
 
 /* MAIN */
-.section {
-    margin-top: .5em;
-    margin-bottom: 1em;
+main {
+    padding: 1em;
 }
 
-.section h2 {
-    margin-left: 5rem;
+.section {
+    margin-top: 1em;
+    margin-bottom: .5em;
 }
 
 .center {
@@ -77,7 +77,7 @@ input[type='number'] {
     background-color: #9370db;
 }
 
-.filter-container {
+.column {
     flex-direction: column;
 }
 
